# rapidfuzz-rs

./: .gitattributes  .gitignore  CHANGELOG.rst  Cargo.toml  LICENSE  Readme.md
benches/: benches.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: damerau_levenshtein.rs  indel.rs  jaro.rs  jaro_winkler.rs  lcs_seq.rs  levenshtein.rs
rapidfuzz-benches/: Cargo.toml
rapidfuzz-benches/benches/: bench_damerau_levenshtein.rs  bench_generic_levenshtein.rs  bench_indel.rs  bench_jaro.rs  bench_jaro_winkler.rs  bench_lcs_seq.rs  bench_levenshtein.rs  bench_osa.rs
src/: common.rs  details.rs  distance.rs  fuzz.rs  levenshtein.rs  lib.rs  process.rs  utils.rs
src/details/: common.rs  distance.rs  growing_hashmap.rs  intrinsics.rs  matrix.rs  mod.rs  pattern_match_vector.rs
src/distance/: damerau_levenshtein.rs  hamming.rs  indel.rs  jaro.rs  jaro_winkler.rs  lcs_seq.rs  levenshtein.rs  mod.rs  osa.rs  postfix.rs  prefix.rs
src/distance/example/: mod.rs  ocr.rs
