[package]
description="rapid fuzzy string matching library"
name = "rapidfuzz"
version = "0.2.0"
authors = ["maxbachmann <oss@maxbachmann.de>"]
edition = "2018"
readme = "Readme.md"
license = "MIT"
repository = "https://github.com/maxbachmann/rapidfuzz-rs"
documentation = "https://docs.rs/rapidfuzz/"
keywords = ["string", "similarity", "Hamming", "Levenshtein", "Jaro"]
exclude = [".*"]
categories = ["text-processing"]

[lib]
name = "rapidfuzz"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8.5"
strsim = "0.10.0"

[[bench]]
name = "benches"
harness = false