[package]
description="rapid fuzzy string matching library"
name = "rapidfuzz"
version = "0.5.0"
authors = ["maxbachmann <oss@maxbachmann.de>"]
edition = "2021"
readme = "Readme.md"
license = "MIT"
repository = "https://github.com/maxbachmann/rapidfuzz-rs"
documentation = "https://docs.rs/rapidfuzz/"
keywords = ["string", "similarity", "Hamming", "Levenshtein", "Jaro"]
exclude = [".*"]
categories = ["text-processing"]

[lib]
name = "rapidfuzz"
